# PANIC

./: .gitignore  MANIFEST.in  README.md  requirements.yaml  setup.cfg  test.py  train.py
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: adni.yaml
configs/experiment/: daft_tuned.yaml
configs/hydra/: panic.yaml
configs/logger/: tensorboard.yaml
configs/model/: daft.yaml  panic.yaml  pretrain_encoder.yaml
configs/trainer/: default.yaml
torchpanic/: testing.py  training.py
torchpanic/datamodule/: adni.py  modalities.py
torchpanic/models/: backbones.py  nam.py  panic.py  ppnet.py  pretrain_encoder.py  protowrapper.py
torchpanic/models/daft/: __init__.py  vol_blocks.py  vol_networks.py
torchpanic/modules/: base.py  panic.py  standard.py  utils.py
torchpanic/viz/: nam_functions.py  summary.py  tabular.py  utils.py  waterfall.py
