[metadata]
name = torchpanic
version = 0.0.1
description = PANIC for AD diagnosis with XAI
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
zip_safe = False
packages=find:
install_requires =
    h5py
    hydra
    numpy
    omegaconf
    pandas
    pytorch_lightning
    tensorboard
    torch
    torchio
    torchmetrics
